_sass/_project.scss
$article-width: 33%;
$article-padding-right: 2em;

article.project {
  width: $article-width;
  float: left;
  padding-right: $article-padding-right;

  @include media-query($on-laptop) {
    width: 100%;
    float: none;
  }

  .project-content {
    font-size: 1.2em;
    line-height: 1.6;
  }
}

aside.project-media {
  width: calc(#{100% - $article-width} - #{$article-padding-right});
  float: left;

  figure {
    margin: 2em 0;

    img, video {
      display: block;
      margin: 1em 0;
      box-shadow: 0 0 0 1px $grey-color-light, 0 5px 20px rgba(0,0,0, 0.2);
      max-width: 100%;
    }

    figcaption {
      color: $grey-color-dark;
    }
  }

  @include media-query($on-laptop) {
    width: 100%;
    float: none;
  }
}

.project-header {
  margin-bottom: 2em;

  h1 {
    font-size: 2.5em;
    margin: 0.2em 0;
    line-height: 1.2;
  }

  h2 {
    font-size: 1.2em;
  }

  p {
    margin: 0.5em 0;
  }

  .link {
    font-size: 1.5em;
  }
}

